--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+/*styles/index.css*/
 @import "react-day-picker/dist/style.css";
 
 @tailwind base;
@@ -31,7 +32,7 @@
     --destructive-foreground: 0 0% 98%;
 
     --border: 240 5.9% 90%;
-    --input: var(--border);
+    --input: 350 10% 18%;
     --ring: 240 5.9% 10%;
 
     --radius: 0.5rem;
