--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -107,3 +107,18 @@
 .rdp-chevron {
   fill: #dc2626 !important; /* crveno */
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.3s ease-in-out;
+}
